# PathOfBuilding-SimpleGraphic

./: CMakeLists.txt  CONTRIBUTING.md  README.md  ui_api.cpp  ui_debug.cpp  ui_main.cpp  ui_subscript.cpp
.github/workflows/: main.yml
cmake/: FindLuaJIT.cmake
engine/common/: common.cpp  console.cpp
engine/core/: core_compress.cpp  core_video.cpp
engine/render/: r_main.cpp  r_texture.cpp
engine/system/: sys_main.h
engine/system/win/: sys_console.cpp  sys_console_unix.cpp  sys_macos.mm  sys_main.cpp  sys_video.cpp
libs/LZip/: lzip.cpp
scripts/: package-runtime.sh  smoke-runtime-archive.py  validate-runtime-artifacts.sh  verify-runtime-archive.py  write-runtime-index.py
tests/: test_release_workflow.py  test_runtime_index.py  test_runtime_smoke.py  test_source_portability.py  test_validate_runtime_artifacts.py  test_verify_runtime_archive.py
vcpkg-ports/ports/luajit/2023-04-16_1/: pob-wide-crt.patch  portfile.cmake  vcpkg.json
vcpkg-ports/ports/luajit/2025-07-24_1/: pob-wide-crt.patch  portfile.cmake  vcpkg.json
win/: entry.cpp
